--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <ul>
 	
 	<li>
-		M.E. Dept. of Unmanned system Research, Northwestern Polytechnical University, Sep. 2020 to Now (Will graduate in March, 2023).
+		M.E. Dept. of Unmanned system Research, Northwestern Polytechnical University, Sep. 2020 to Jun. 2023.
 	<li>
 		B.E. Dept. of Artificial Intelligence, Nanjing Agricultural University, Sep. 2016 to Jun. 2020.
 	</li>
@@ -92,26 +92,26 @@
 <h3>Journal Papers</h3>
 <ol>
        <li>
-                          <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao, and Dengxiu Yu, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, doi: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>SCI, IF:5.129, 中科院1区</strong>)  </a>
+                          <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao, and Dengxiu Yu, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, doi: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>SCI, IF:5.0, 中科院1区</strong>)  </a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2022, doi: 10.1109/JSYST.2022.3212068 (<strong>SCI, IF:4.802, 中科院2区</strong>)  <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2022, doi: 10.1109/JSYST.2022.3212068 (<strong>SCI, IF:4.4, 中科院2区</strong>)  <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:1.8, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022，doi: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:7.847, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022，doi: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:11.8, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
-control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.897, 中科院1区</strong>) (Under review).    </a>
+control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.9, 中科院1区</strong>) (Under review).    </a>
 	</li>	
                 <li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Yangwang Fang, Hao Wang and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2023(<strong>SCI, IF:5.033, 中科院2区</strong>) (Under review).    </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Yangwang Fang, Hao Wang and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2023(<strong>SCI, IF:6.6, 中科院2区</strong>) (Major Revision).    </a>
         </li>
                 <li>
-                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023 (Under review).    </a>
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023 (Major Revision).    </a>
         </li>
 </ol>
 
@@ -146,13 +146,6 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 	<li>
                                       方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
 	</li>
-	<li>
-                                      符文星, <strong>李家诚</strong>, 吴自豪, "一种预定时间收敛的非线性系统控制方法"</a>,  CN Patent：(已提交) (First inventor is tutor). </a>
-	</li>
-	<li>
-                                      符文星, <strong>李家诚</strong>, 吴自豪, "一种基于双射变换的无人机集群转弯策略"</a>,  CN Patent：(已提交) (First inventor is tutor). </a>
-	</li>
-
 </ol>
 
 <h2>Participate in Research Projects</h2>
@@ -234,7 +227,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng Li | Last updated: 06/2023</center>
+	<center>© Jiacheng Li | Last updated: 07/2023</center>
     <!--<center>© Jiacheng Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
