--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2>Biography</h2>
 <p>
 	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
- I am currently pursuing the M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a> , <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a>. </div>
+ I am currently pursuing the M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a> , <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a>. </div> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. </div>
 <p></p>
 
 <h2>Education</h2>
@@ -63,7 +63,7 @@
 	<li>
 		Unmanned aerial vehicles (UAVs) control
 		<ul>
-			<li>UAVs Formation Control, Swarm Control, Collision Avoidance Control of Cooperative UAVs.</li>
+			<li>UAVs Formation Control, Swarm Control, Swarm Security Control，Collision Avoidance Control of Cooperative UAVs.</li>
 		</ul>	
 	</li>
 	<li>
