--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h3>Master degree candidate, Northwestern Polytechnical University</h3>
                               
 				<p>
-					Email: &nbsp;&nbsp;<a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and &nbsp;&nbsp;<a href="mailto:
+					Email: &nbsp;&nbsp;<a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and <a href="mailto:
 JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 				</p>
                  <!--      <p>&nbsp; </p>-->
