--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <!--<h1>Jiacheng LI &nbsp; <img src="pics/name_chs.png" height="40px" style="margin-bottom:-10px"></h1>-->
                         <h1>Jiacheng LI (<strong>李家诚</strong>)</h1>
 				</div>
-				<h3>Master degree candidate, Northwestern Polytechnical University</h3>
+				<h3> Northwestern Polytechnical University</h3>
                               
 				<p>
 					Email: &nbsp;&nbsp;<a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and <a href="mailto:
@@ -45,7 +45,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Biography</h2>
 <p>
 	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
- I am currently pursuing the M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a> , <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. </div>
+ I obtained my M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a> , <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. </div>
 <p></p>
 
 <h2>Education</h2>
@@ -151,9 +151,9 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 
 <h2>Participate in Research Projects</h2>
 <ol>
-	<li>
+	         <li>
                        2018.05-2019.05, Design of tractor teleoperating system based on the cloud platform, <i>Nanjing Agricultural University Student Scientific Research Training (SRT) Project</i>, Student in charge.
-	</li>
+	        </li>
                 <li>
                        2020.10-2021.05, Research on System Resilience Assessment Technology, <i>AVIC Chengdu Flight Design Institute (611)</i>, Main participant.
                 </li>
@@ -163,9 +163,18 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                 <li>
                       2021.12-2022,12, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
                 </li>
+		<li>
+                       2023.01-2023.07, Coordinated Control of Unmanned Underwater Vehicles (UUV) Swarm , <i>The 705th Research Institute of China Shipbuilding Industry Corporation</i>, Student in charge.
+	        </li>
 </ol>
 
-
+<h2>Internship Experience</h2>
+<ol>
+	<li>
+		 2021.12-2022,02 and  2023.03-2023,04, <i>Xi'an Daheng Tiancheng Information Technology Co., Ltd.</i>，Participate in project product development.
+	</li>
+</ol>
+	    
 <h2>Relevant Materials</h2>
 <ol>
 	<li>
@@ -228,7 +237,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng Li | Last updated: 07/2023</center>
+	<center>© Jiacheng Li | Last updated: 08/2023</center>
     <!--<center>© Jiacheng Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
