--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h2>Manuscript Review works</h2>
 <ol>
 	<li>
-                     Reviewer of Chinese Automation Congress (CAC2021, CAC2022).
+                     Reviewer of Chinese Automation Congress (CAC2021, CAC2022, CAC2023).
                </li>
 </ol>
 
