--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 	        </li>
 </ol>
 
-<h2>Internship Experience</h2>
+<h2>Internship Experiences</h2>
 <ol>
 	<li>
 		 2021.12-2022,02 and  2023.03-2023,04, <i>Xi'an Daheng Tiancheng Information Technology Co., Ltd.</i>，Participate in project product development.
@@ -178,7 +178,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h2>Relevant Materials</h2>
 <ol>
 	<li>
-		Former Laboratory link <a href="https://www.njaurobot.cn">(Intelligent Robot Laboratory)</a>  (<a href="https://www.njaurobot.cn/student2/lijiacheng.html">https://www.njaurobot.cn/student2/lijiacheng.html</a>) 
+		Former Laboratory link <a href="https://www.njaurobot.cn">(Intelligent Robot Laboratory)</a>  (<a href="https://www.njaurobot.cn/student2/lijiacheng.html">https://www.njaurobot.cn/student2/lijiacheng.html</a>).
 	</li>
 </ol>
 
