--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h2>Work Presentations</h2>
 <ul>
 	<li>
-		Collision avoidance control of cooperative UAVs.
+		Collision avoidance control of cooperative UAVs
 	</li>
 	<td><img src="./JC_L_files/avoid.png" border="0" height="145"><br></td>
                          <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
@@ -211,7 +211,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 	<td><img src="./JC_L_files/swarm.png" border="0" height="270"><br></td>
 	<td><img src="./JC_L_files/Large swarm.png" border="0" height="280"><br></td>
 	<li>
-		Teleoperation of tractor driving robot.
+		Teleoperation of tractor driving robot
 	</li>
                  <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
 		<source src="./JC_L_files/Tractor.mp4" type="video/mp4">
@@ -220,7 +220,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 		Your browser does not support the video tag.
 	</video>
 	<li>
-		Unmanned driving robot of tractor.
+		Unmanned driving robot of tractor
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
                  <li>
