--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Biography</h2>
 <p>
 	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
- I obtained my M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a>, <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a> in 2023, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. </div>
+ I obtained my M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a>, <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a> in 2023, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. I am currently working as a research assistant in University of Macau, Department of Electromechanical Engineering, under the supervision of <a href="https://www.fst.um.edu.mo/people/jasonliu/">Dr. Jason J. R. Liu.</a> </div>
 <p></p>
 
 <h2>Education</h2>
@@ -104,15 +104,15 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022，doi: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:11.8, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
+	 <li>
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, doi: 10.1109/TAI.2023.3314581.(First author is tutor)    </a>
+        </li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
-control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.9, 中科院1区</strong>) (Under review).    </a>
+control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.9, 中科院2区</strong>) (Major Revision).    </a>
 	</li>	
                 <li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Yangwang Fang, Hao Wang and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2023(<strong>SCI, IF:6.6, 中科院2区</strong>) (Major Revision).    </a>
-        </li>
-                <li>
-                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023 (Major Revision).    </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Yangwang Fang, Hao Wang and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2023(<strong>SCI, IF:6.6, 中科院2区</strong>) (Under review).    </a>
         </li>
 </ol>
 
