--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022，doi: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:11.8, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	 <li>
-                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, doi: 10.1109/TAI.2023.3314581.(First author is tutor) <a href="./JC_L_files/TAI.pdf" download="TAI2023ljc.pdf"><strong>PDF</strong></a> 
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, doi: 10.1109/TAI.2023.3314581.(First author is tutor) <a href="./JC_L_files/TAI2023.pdf" download="TAI2023ljc.pdf"><strong>PDF</strong></a> 
         </li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
@@ -132,7 +132,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                          Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022，doi: 10.1088/1361-6501/ac8dae. (<strong>SCI, IF:2.398, 中科院3区</strong>) , <a href="./JC_L_files/MST.pdf" download="MST.pdf"><strong>PDF</strong></a>
 	</li>     
 	       <li>
-                         黄号, 马文卉, <strong>李家诚</strong>, 方洋旺,  &quot; 未知环境下无人机编队智能避障控制方法 </a>,&quot; <i>清华大学学报（自然科学版）</i>, 2023 (Under review).    </a>
+                         黄号, 马文卉, <strong>李家诚</strong>, 方洋旺,  &quot; 未知环境下无人机编队智能避障控制方法 </a>,&quot; <i>清华大学学报（自然科学版）</i>, 2023 (Accepted).    </a>
          </li>  
 </ol></h3>
 
