--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022，doi: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:11.8, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	 <li>
-                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, doi: 10.1109/TAI.2023.3314581.(First author is tutor) <a href="./JC_L_files/TAI2023.pdf" download="TAI2023ljc.pdf"><strong>PDF</strong></a> 
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, doi: 10.1109/TAI.2023.3314581.(First author is tutor) <a href="./JC_L_files/TAI2023_compressed.pdf" download="TAI2023ljc.pdf"><strong>PDF</strong></a> 
         </li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
@@ -237,7 +237,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng Li | Last updated: 08/2023</center>
+	<center>© Jiacheng Li | Last updated: 09/2023</center>
     <!--<center>© Jiacheng Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
