--- a/index.html
+++ b/index.html
@@ -64,32 +64,52 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Swarm Control
 		<ul>
-			<li>UAVs Formation Control, Swarm Control, Swarm Security Control，Collision Avoidance Control of Cooperative UAVs.</li>
+			<li>Swarm Control, Swarm Security Control,  Cyber physical system (CPS), Multi-agent system.</li>
 		</ul>	
 	</li>
 	<li>
 		Robot control
 		<ul>
-			<li>Robot Sensing Detection and Control Application.</li>
+			<li>Robot Sensing Detection and Control Application, Teleoperation.</li>
 		</ul>
 		
 	</li>
-	<li>
-		Teleoperation
-		<ul>
-			<li>Teleoperation Time Delay Control and Practical Application.</li>
-		</ul>
-	</li>
 </ul>
 
-<h2>Language proficiency</h2>
+<h2>News</h2>
 <ul>
 	<li>
-		English: Advanced.
+	 Oct. 2023 I am invited to be a reviewer for International Journal of Aerospace Engineering and Franklin Open.
+	</li>
+	<li>
+	 Sep. 2023 Our overview of swarm coordinated control is accepted by IEEE Transactions on Artificial Intelligence.
+	</li>
+         <li>
+	 Sep. 2023 I am invited to be a reviewer for Chinese Automation Congress (CAC)  2023.
+	</li>
+	 <li>
+	 Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to conducting valuable and innovative research in the future.
 	</li>
 </ul>
 
 <h2>Publications</h2>
+<h3>Submitted for publication </h3>
+        <li>
+                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel
+control </a>,&quot; 2022.    </a>
+	</li>	
+        <li>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
+        </li>
+	<li>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
+	</li>
+	<li>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, &quot; Event-based Time-varying UAV Formation Obstacle Avoidance Control under Cyber-attacks</a>,&quot; 2023.   </a>
+	</li>
+	<li>
+	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>,  Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
+	</li>
 <h3>Journal Papers</h3>
 <ol>
        <li>
@@ -106,13 +126,6 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	</li>
 	 <li>
                           Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, doi: 10.1109/TAI.2023.3314581.(First author is tutor) <a href="./JC_L_files/TAI2023_compressed.pdf" download="TAI2023ljc.pdf"><strong>PDF</strong></a> 
-        </li>
-                 <li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
-control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.9, 中科院2区</strong>) (Major Revision).    </a>
-	</li>	
-                <li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Yangwang Fang, Hao Wang and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2023(<strong>SCI, IF:6.6, 中科院2区</strong>) (Under review).    </a>
         </li>
 </ol>
 
@@ -185,7 +198,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h2>Manuscript Review works</h2>
 <ol>
 	<li>
-                     Reviewer of Chinese Automation Congress (CAC2021, CAC2022, CAC2023).
+                     Reviewer of International Journal of Aerospace Engineering, Franklin Open, and Chinese Automation Congress (CAC2021, CAC2022, CAC2023).
                </li>
 </ol>
 
@@ -237,7 +250,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng Li | Last updated: 09/2023</center>
+	<center>© Jiacheng Li | Last updated: 10/2023</center>
     <!--<center>© Jiacheng Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
