--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ control </a>,&quot; 2022.    </a>
 <h2>Work Presentations</h2>
 <ul>
 	<li>
-		Collision avoidance control of cooperative UAVs
+		Collision Avoidance Control of Cooperative UAVs based on Light Transmission Model
 	</li>
 	<td><img src="./JC_L_files/avoid.png" border="0" height="145"><br></td>
                          <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
@@ -215,16 +215,16 @@ control </a>,&quot; 2022.    </a>
 		Your browser does not support the video tag.
 	</video>
 	<li>
-		UAV formation control
+		UAV Affine Formation Control
 	</li>
 	<td><img src="./JC_L_files/formation.png" border="0" height="250"><br></td>
 	<li>
-		Large-scale UAV swarm coordination control
+		Large-scale UAV Swarm Coordination Control
 	</li>
 	<td><img src="./JC_L_files/swarm.png" border="0" height="270"><br></td>
 	<td><img src="./JC_L_files/Large swarm.png" border="0" height="280"><br></td>
 	<li>
-		Teleoperation of tractor driving robot
+		Teleoperation of Tractor Driving Robot
 	</li>
                  <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
 		<source src="./JC_L_files/Tractor.mp4" type="video/mp4">
@@ -233,7 +233,7 @@ control </a>,&quot; 2022.    </a>
 		Your browser does not support the video tag.
 	</video>
 	<li>
-		Unmanned driving robot of tractor
+		Unmanned Driving Robot of Tractor
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
                  <li>
@@ -244,7 +244,14 @@ control </a>,&quot; 2022.    </a>
 		Cooperative Control of Swarm System under Dos attack via Cloud-Fog Computing
 	</li>
 	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="300"><br></td>
-	
+	<li>
+		Event-based Time-varying UAV formation
+	</li>
+	<td><img src="./JC_L_files/ET obstacle.png" border="0" height="270"><br></td>
+	<li>
+		Secure Collaborative Control in Heterogeneous Swarms with Cooperative-Competitive Interactions 
+	</li>
+	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="300"><br></td>
 </ul>
 
 <div id="footer">
