--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Swarm Control
 		<ul>
-			<li>Swarm Control, Swarm Security Control,  Cyber physical system (CPS), Multi-agent system.</li>
+			<li>Swarm Control, Swarm Security Control,  Cyber physical system (CPS), Multi-Agent system.</li>
 		</ul>	
 	</li>
 	<li>
@@ -88,12 +88,13 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	 Sep. 2023 I am invited to be a reviewer for Chinese Automation Congress (CAC)  2023.
 	</li>
 	 <li>
-	 Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to conducting valuable and innovative research in the future.
+	 Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to do more valuable and innovative research in the future.
 	</li>
 </ul>
 
 <h2>Publications</h2>
 <h3>Submitted for publication </h3>
+<ol>
         <li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel
 control </a>,&quot; 2022.    </a>
@@ -110,6 +111,7 @@ control </a>,&quot; 2022.    </a>
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>,  Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
+</ol>
 <h3>Journal Papers</h3>
 <ol>
        <li>
