--- a/index.html
+++ b/index.html
@@ -96,10 +96,6 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h3>Submitted for publication </h3>
 <ol>
         <li>
-                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel
-control </a>,&quot; 2022.    </a>
-	</li>	
-        <li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
         </li>
 	<li>
@@ -111,6 +107,9 @@ control </a>,&quot; 2022.    </a>
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>,  Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
+	<li>
+                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel control </a>,&quot; 2022.    </a>
+	</li>	
 </ol>
 <h3>Journal Papers</h3>
 <ol>
