--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Swarm Control
 		<ul>
-			<li>Swarm Control, Swarm Security Control,  Cyber physical system (CPS), Multi-Agent system.</li>
+			<li>Swarm Control, Swarm Security Control,  Cyber Physical system (CPS), Multi-Agent System.</li>
 		</ul>	
 	</li>
 	<li>
@@ -252,7 +252,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Secure Collaborative Control in Heterogeneous Swarms with Cooperative-Competitive Interactions 
 	</li>
-	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="290"><br></td>
+	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="285"><br></td>
 </ul>
 
 <div id="footer">
