--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Swarm Control
 		<ul>
-			<li>Swarm Control, Swarm Security Control,  Cyber Physical system (CPS), Multi-Agent System.</li>
+			<li>Swarm Control, Swarm Security Control,  Cyber Physical System (CPS), Multi-Agent System.</li>
 		</ul>	
 	</li>
 	<li>
@@ -108,7 +108,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>,  Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel control </a>,&quot; 2022.    </a>
+                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
 </ol>
 <h3>Journal Papers</h3>
@@ -120,7 +120,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2022, DOI: 10.1109/JSYST.2022.3212068 (<strong>SCI, IF:4.4, 中科院2区</strong>)  <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, DOI: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:1.8, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned Aerial Vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, DOI: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:1.8, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022, DOI: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:11.8, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
@@ -133,7 +133,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h3>Conference Papers</h3>
 <ol>
                <li>
-                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020, DOI: 10.1109/CAC51589.2020.9326587.  (EI, Reviewed by IEEE Xplore), <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor Steering Teleoperation Control with Fuzzy PID Algorithm based on Delay Time Measurement with Timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020, DOI: 10.1109/CAC51589.2020.9326587.  (EI, Reviewed by IEEE Xplore), <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
 	</li>
                   <li>
                          <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot; <a class="dhtgD aw5Odc" href="https://link.springer.com/chapter/10.1007/978-981-19-6613-2_434" target="_blank">Affine Formation Obstacle Avoidance Control of Unmanned Aerial Vehicles with Prescribed Convergence Time </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022, DOI: https://doi.org/10.1007/978-981-19-6613-2_434 (EI, Reviewed by IEEE Xplore), <a href="./JC_L_files/Affine.pdf" download="Affinejc.pdf"><strong>PDF</strong></a>
@@ -166,13 +166,13 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Participate in Research Projects</h2>
 <ol>
 	         <li>
-                       2018.05-2019.05, Design of tractor teleoperating system based on the cloud platform, <i>Nanjing Agricultural University Student Scientific Research Training (SRT) Project</i>, Student in charge.
+                       2018.05-2019.05, Design of Tractor Teleoperating System based on the Cloud Platform, <i>Nanjing Agricultural University Student Scientific Research Training (SRT) Project</i>, Student in charge.
 	        </li>
                 <li>
                        2020.10-2021.05, Research on System Resilience Assessment Technology, <i>AVIC Chengdu Flight Design Institute (611)</i>, Main participant.
                 </li>
                  <li>
-                      2020.10-2021.12, Development of UAV formation collaborative flight control simulation system, <i>Xidian University</i>, Main participant.
+                      2020.10-2021.12, Development of UAV Formation Collaborative Flight Control Simulation System, <i>Xidian University</i>, Main participant.
                 </li>
                 <li>
                       2021.12-2022,12, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
@@ -240,11 +240,11 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
                  <li>
 		Leader-follower Formation control
 	</li>
-	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="350"><br></td>
+	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="340"><br></td>
 	 <li>
 		Cooperative Control of Swarm System under Dos attack via Cloud-Fog Computing
 	</li>
-	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="300"><br></td>
+	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="280"><br></td>
 	<li>
 		Event-based Time-varying UAV formation
 	</li>
@@ -252,7 +252,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Secure Collaborative Control in Heterogeneous Swarms with Cooperative-Competitive Interactions 
 	</li>
-	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="285"><br></td>
+	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="270"><br></td>
 </ul>
 
 <div id="footer">
